# fsrc

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  action.yml  example.yml  install.sh  sr.yaml  teasr.toml
.github/workflows/: ci.yml  release.yml
showcase/demo/: README.after.md  README.md  api.py  config.yml
skills/embed-src/: SKILL.md
src/: embed.rs  lib.rs  main.rs  ui.rs
tests/: integration.rs
