[package]
name = "embed-src"
version = "3.3.1"
edition = "2021"
description = "Embed source files into any text file"
license = "Apache-2.0"
repository = "https://github.com/urmzd/embed-src"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
indicatif = "0.17"
regex = "1"
