[package]
name = "fsrc"
version = "4.0.0"
edition = "2021"
description = "Embed source files into any text file"
license = "Apache-2.0"
repository = "https://github.com/urmzd/fsrc"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
indicatif = "0.17"
regex = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "3", features = ["json"] }
